# queen

./: .gitignore  CMakeLists.txt  README.md  linker.ld
src/boot/: limine.conf
src/kernel/: benchmark.cpp  benchmark.hpp  event_loop.cpp  exceptions.cpp  framebuffer.cpp  framebuffer.hpp  gdt.cpp  gdt.hpp  gdt_flush.S  idt.cpp  idt.hpp  interrupts.S  kernel_main.cpp  kernel_main.hpp  limine.h  limine_requests.cpp  load_cr3.S  main.cpp  mathutil.cpp  mathutil.hpp  memory.cpp  memory.hpp  paging.cpp  paging.hpp  panic.cpp  panic.hpp  pic.cpp  pic.hpp  program.hpp  serial.cpp  serial.hpp  switch_stack.S  time.hpp  util.hpp
src/tests/: rdtsc_benchmark.cpp  spsc_baseline.cpp  timing_benchmark.cpp
